--- a/.github/workflows/django-tests.yml
+++ b/.github/workflows/django-tests.yml
@@ -20,6 +20,7 @@ jobs:
 
     - name: Install dependencies
       run: |
+        cd classroom_booking
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         pip install coverage
